# cs-iv-algorithm

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.sh  test.cpp
include/: cs-iv-algorithm.h
src/: CMakeLists.txt  cs-iv-algorithm.cpp  cs-iv-algorithm.h  sample.cpp
test/: test.cpp
tests/: CMakeLists.txt  test.cpp
